[package]
name = "slipway_svg"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
resvg = "0.45.0"
usvg = "0.45.0"
csscolorparser = "0.7.0"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
